fixed all decovered alining bugs

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -149,3 +149,12 @@ input {
 .lt-ie9 .search input {
   line-height: 26px;
 }
+
+
+.two-button-table {
+  table-layout: fixed;
+//  border-: none;
+  border:  none;
+  border-width:0
+  
+}
